fix: subtle mobile device spacing issues

--- a/src/styles/layout/_banner.scss
+++ b/src/styles/layout/_banner.scss
@@ -90,10 +90,8 @@
 
 canvas.banner-animation {
     position: absolute;
-    left: 50%;
-    top: 50vh;
-    transform: translate(-50%, -50%);
+    top: 0;
+    left: 0;
     z-index: 0;
     background: black;
-    margin-top: -25px; // I have no idea why this works
 }
